# ALSE-G3

./: Parcial #1 - 18-09-2025.cpp  README.md
02-10-2025/: Palindrome.cpp  TwoSum.cpp
15-10-2025/: ALSE-G3 17-10-2025.docx  Buy and Sell Stock.cpp  Excel Column Number.cpp  Pascal's Triangle.cpp  Stock Prueba #1.cpp
Parcial_#2/include/: Copialina.h  archivo.h
Parcial_#2/src/: Device  Dispositivos.cpp  archivo.cpp  main.cpp
Proyecto Final ALSE G3/: Proyecto de ALSE.txt
Proyecto Final ALSE G3/InventarioHogar/: CMakeLists.txt  main.cpp
Proyecto Final ALSE G3/InventarioHogar/include/: component.h  database.h  inventory.h
Proyecto Final ALSE G3/InventarioHogar/src/: database.cpp  inventory.cpp
SQL_Test/src/: main.cpp
